Homepage created. Shift swap completed. All messages are sent to the correct receiver, UI reflect changes and authorisation accordingly. Delete button added for the requests.
TODO:
1. Add messages to all users from the admin (or sending messages for all users)
2. Add holiday/off request

--- a/src/app/rota/rota-swap/rota-swap.component.css
+++ b/src/app/rota/rota-swap/rota-swap.component.css
@@ -20,3 +20,8 @@ form {
 .calendar {
   padding: 1rem;
 }
+
+.confirmation {
+  color: darkgreen;
+  font-weight: bold;
+}
